--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,12 +4,13 @@ version: 2.0.4
 homepage: https://github.com/AbdulRahmanAlHamali/flutter_pagewise
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=3.4.3 <4.0.0'
+  flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  async: ^2.0.8
+  async: ^2.11.0
 
 dev_dependencies:
   flutter_test:
